--- a/블록체인/토큰.md
+++ b/블록체인/토큰.md
@@ -27,7 +27,7 @@
 
 대체가능하지 않은 토큰은 고유 유형물이나, 고유 무형 항목의 토큰임으로 상호 교환이 불가하다. (신원 증명 기능을 가진 토큰일 경우 이 경우에 해당할 것 같다.)
 
-크립토 키티같은 디지털 수집물 토큰은 다른 키티와 상호 교환이 불가능하다.
+특정크립토 키티같은 디지털 수집물 토큰은 다른 키티와 상호 교환이 불가능하다.
 
 
 # 3. 거래 상대방 위험
@@ -64,3 +64,81 @@
 
 # 7. ERC 20 토큰 표준
 
+이슈번호 20이여서 ERC 20 토큰이 되었다.
+대다수 토큰은 ERC20이 베이스이다.
+ERC는 대체 가능한 토큰이다. 
+ERC20 토큰은 토큰을 구현하는 컨트랙트에 대한 공통 인터페이스를 정의한다. 호환가능하게 할려면 ERC20이 정의한 인터페이스를 따라야한다. 
+
+## ERC20 필수 함수와 이벤트들.
+
+totalSupply : 현재 존재하는 이 토큰의 개수를 리턴한다.
+balanceOf : 주소가 주어지면 해당 주소의 토큰 잔액 반환.
+transfer : 주소와 금액이 주어지면 해당 주소로 토큰 전송.
+transferFrom : 보낸 사람, 받는 사람 및 금액이 주어지면 한 계정에서 다른 계정으로 전송함.
+approve : 수취인 주소와 금액이 주어지면 그 주소가 승인한 계정에서 송금할 수 있도록 승인.
+allowance : 소유자 주소와 지출자 주소가 주어지면 지출자가 출금할 수 있도록 소유자가 승인한 잔액을 리턴.
+Transfer : 전송이 성공하면 이벤트 트리거.
+Approval : approve를 성공적으로 호출하면 이벤트 기록.
+
+## ERC 20 선택적 함수.
+name : 사람이 읽을 수 있는 토큰 이름을 반환
+symbol : 사람이 읽을 수 있는 기호 반환
+decimals : 토큰양을 나눌 수 있는 소수 자릿수 반환  decimals가 2이면 토큰양 100으로 나눠 표현.
+
+```solidity
+contract ERC20{
+    function totalSupply() constant returns (uint theTotalSupply);
+    function balanceOf(address _owner) constant returns (uint balance);
+    function transfer(address _to,uint _value) returns (bool success);
+    function transferFrom(address _from,address _to,uint _value) returns (bool success);
+    function approve(address _spender,uint _value) returns (bool success);
+    function allowance(address _owner,address _spender) constant returns (uint remaining);
+    event Transfer(address indexed _from,address indexed _to,uint _value);
+    event Approval(address indexed _owner,address indexed _spender,uint _value);
+}
+```
+
+mapping(address => uint256) balance; //주소에 잔액이 얼마나 있는지 추적.
+mapping (address=>mapping(address)=>uint256)) public allowed; //허용량 데이터구조. 출금을 허용하는 계정 주소와, 출금하는 계정주소 그리고 잔액이 얼마나 되는지를 매핑한다.
+
+ERC20 토큰을 사용하면 토큰 사용자가 권한을 위임자에게 위임하여 소유자의 잔액에서 한도내에서 지출할 수 있게 한다.
+
+## ERC 20 워크플로, transfer , approve , transferFrom
+
+transfer와 transferFrom 차이점. transfer는 단일 트랜잭션 이다. 지갑 -> 지갑으로 트랜잭션을 보낸다.
+trnasferFrom은 approve후 transferFrom을 한다.
+먼저 approve로 권한자가. 권한을 위임할 사람의 계좌와 한도를 설정한후, 그후에 transferFrom으로 금액을 전송한다.
+
+ICO할때 주로 사용된다. 
+
+가정 1. Alicoin이 ICO 해서 투자자를 모아야한다. 앨리스 코인 50%를 판매할 계획이다. AliceICO Contract를 허용할것이다.
+(COIN, AliceICO Contract, AliceCoin Contract 전부 다른거임)
+AliceICO Contract는 이더를 판매하는 판구
+AliceCoin에서 코인을 제한된 코인을 발급
+코인은 Alice의 계정에 있어 approve로 AliceICO,500을 담은 트랜잭션을 AliceCoin 컨트랙트로 보내면
+AliceCOin 컨트랙트는 ICO에서 승인한 계좌에 돈을 송금하게 된다.
+돈은 AliceCoin 컨트랙트에서 . 승인하여 계좌로 송금한다.
+( 왜 이렇게 되냐면 AliceCoin으로 approve 트랜잭션 (address=AliceCoinICO,maxvalue) 이 갔기 때문에 AliceCOinICO에서 trnasferFrom이 나오면 받은 maxvalue 한도로 코인을 발급한다.)
+
+1. AliceCoin(ERC20)은 만들어졌다고 가정한다.
+2. AliceCoin을 처리할 AliceICO 컨트랙트를 발행한다.
+3. AliceCoin 모든 콘인을 컨트랙트 주소로 발급한다.
+4. AliceCoin 컨트랙트 시작.
+5. 앨리스가 approve로 _spender에 AliceICO 주소, _value로 앨리스 코인 50%를 넣은 트랜잭션을 앨리스 코인 컨트랙트에 넣는다. 이제 AliceICO 컨트랙트는 앨리스 코인 판매가 가능하다.
+6. AliceICO가 밥으로부터 이더를ㄹ 받으면 transfer를 호출한다. _from은 앨리스 주소, _to로는 밥을 넣고 환율에 맞는 보낼 이더의 양을 넣는다.
+7. AliceCoin 컨트랙트가 이를 수신받고 밥에게 코인을 전송하고 Transfer 트리거를 호출한다. 
+AlliceICO 컨트랙트는 allowance 남은 한도를 관리할 수 있다.
+
+정리 
+
+AliceICO는 판매대행 창구이다.
+
+AliceCoin Contract는 실제로 코인을 발급한다.
+
+Alice가 가지고 있는 코인을 approve(AliceICO,500) 트랜잭션을 AliceCoin Contract에 넣어줘야한다. 이것이 의미하는것은 AliceCOin Contract에서 AliceICO 가 승인한 계좌에게 엘리스의 500개 토큰을 발급해줄 수 있다는 의미이다.
+AliceICO는 구매자가 토큰을 구매하면 AliceCoin Contract에 transferFrom(앨리스,밥,10) 을 넣어준다. 이말은 앨리스계좌에서 밥에게 10개의 토큰을 보내달라고 AliceICO가 CoinContract에 요청한것이 된다.
+이미 CoinContract는 approve로 AliceICO가 승인한 계좌에게 앨리스의 토큰을 배분한다는 approve가 와잇기 때문에 transferFrom을 수행한다.
+
+
+# 자체 ERC 20 토큰 출시하기.
+토큰을 만들어보자 truffle을 사용한다.
