--- a/Node/fastCampus/비동개패턴/비동기패턴.md
+++ b/Node/fastCampus/비동개패턴/비동기패턴.md
@@ -36,10 +36,14 @@ class DatabaseManager {
 class Lock{
     constructor(){
         this._lock = false;
+        //_waiting 배열. resolve가 저장됨
         this._waiting = [];
     }
     lock (){
-
+        // unlock 함수. waiting에 있는 resolve를 컨트롤하거나 락 상태를 해제하는 함수.
+        // 매번 waiting 배열에 가장 앞부분 resolve를 가져와 unlock 함수를 재귀적으로 넣음으로써 해제하게 유도함.
+        // Lock 함수를 쓰는 코드는 async await을 샤용하기 때문에. resolve에 값이 들어와야 await이 해제됨
+        // 이런식으로도 해결이 가능하구나
         const unlock = ()=>{
             let nextResolve
             if(this._waiting>length>0){
@@ -51,12 +55,14 @@ class Lock{
         }
 
         //락 되어있을경우
+        // waiting 큐에 resolve를 넣음
         if(this._locked){
             return new Promise(resolve=>{
                 this._waiting.push(resolve);
             });
         }else{
             //락이 안되어잇을경우 resolve를 풀어내야한다.
+            
             this._locked = true;
             return new Promise(resolve=>{
                resolve(unlock);
